--- a/app/index.html
+++ b/app/index.html
@@ -18,44 +18,47 @@
     <script src="scripts/vendor/modernizr.min.js"></script>
 </head>
 <body>
-    <div class="modal" style="margin-top: 50px">
-        <div class="modal-header">seeker or a leaser?</div>
-        <div class="modal-body">
-            <div><a href="#">seeker</a></div>
-            <div><a href="#">leaser</a></div>
-            <div class="modal-footer">
-                <button class="btn btn-primary">Go</button>
+    <div class="span12" style="color:blue;"></div>
 
-            </div>
+
+<!--    <div class="modal" style="margin-top: 50px">
+    <div class="modal-header">seeker or a leaser?</div>
+    <div class="modal-body">
+        <div><a href="#">seeker</a></div>
+        <div><a href="#">leaser</a></div>
+        <div class="modal-footer">
+            <button class="btn btn-primary">Go</button>
+
         </div>
+    </div>-->
 
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-        <![endif]-->
+    <!--[if lt IE 7]>
+        <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+    <![endif]-->
 
-        <!-- Add your site or application content here -->
+    <!-- Add your site or application content here -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
 
-        <!-- build:js scripts/plugins.js -->
-        <script src="scripts/vendor/bootstrap/bootstrap-affix.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-alert.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-dropdown.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-tooltip.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-modal.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-transition.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-button.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-popover.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-typeahead.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-carousel.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-scrollspy.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-collapse.js"></script>
-        <script src="scripts/vendor/bootstrap/bootstrap-tab.js"></script>
-        <script src="components/handlebars/handlebars.js"></script>
-        <script src="components/handlebars/handlebars.runtime.js"></script>
+    <!-- build:js scripts/plugins.js -->
+    <script src="scripts/vendor/bootstrap/bootstrap-affix.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-alert.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-dropdown.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-tooltip.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-modal.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-transition.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-button.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-popover.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-typeahead.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-carousel.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-scrollspy.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-collapse.js"></script>
+    <script src="scripts/vendor/bootstrap/bootstrap-tab.js"></script>
+    <script src="components/handlebars/handlebars.js"></script>
+    <script src="components/handlebars/handlebars.runtime.js"></script>
     <!-- endbuild -->
 
-        <script src="scripts/app.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
