--- a/app/index.html
+++ b/app/index.html
@@ -3,35 +3,47 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html class="no-js" ng-app="app">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/typeahead.css">-->
     <script src="scripts/vendor/modernizr.min.js"></script>
+    <script src="components/angular/angular.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO30yN3rweCsE4wqPCUyMH-bpBgK8GYpM&sensor=false"></script>
+
 </head>
 <body>
-    <div class="span12" style="color:blue;"></div>
 
 
-<!--    <div class="modal" style="margin-top: 50px">
-    <div class="modal-header">seeker or a leaser?</div>
-    <div class="modal-body">
-        <div><a href="#">seeker</a></div>
-        <div><a href="#">leaser</a></div>
-        <div class="modal-footer">
-            <button class="btn btn-primary">Go</button>
+    <div class="container">
 
+        <div class="navbar" ng-show="showNav">
+            <div class="navbar-inner">
+                <ul class="nav">
+                    <!--<span class="icon-home">&nbsp;</span>-->
+                    <li ng-class="{active: loc=='home'}"><a ng-click="setLocation('home')" href="#/home">
+                        <i class="icon-home"></i>&nbsp;Home</a></li>
+                    <li ng-class="{active: loc=='find'}"><a ng-click="setLocation('find')" href="#/find">
+                        <i class="icon-search"></i>&nbsp;Find</a></li>
+                    <li ng-class="{active: loc=='provide'}"><a ng-click="setLocation('provide')" href="#/provide">
+                        <i class="icon-hand-right"></i>&nbsp;Provide</a></li>
+                    <li ng-class="{active: loc=='about'}"><a ng-click="setLocation('about')" href="#/about">
+                        <i class=""></i>&nbsp;About</a></li>
+                </ul>
+            </div>
         </div>
-    </div>-->
 
+        <div ng-view class="row"></div>
+    </div>
     <!--[if lt IE 7]>
         <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
@@ -59,6 +71,6 @@
     <script src="components/handlebars/handlebars.runtime.js"></script>
     <!-- endbuild -->
 
-    <script src="scripts/app.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
