--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <!--<link rel="stylesheet" href="styles/typeahead.css">-->
     <script src="scripts/vendor/modernizr.min.js"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="components/underscore/underscore.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO30yN3rweCsE4wqPCUyMH-bpBgK8GYpM&sensor=false"></script>
 
 </head>
